--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/sandesh_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/sandesh_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sandesh"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activities.ChatActivity"
-            android:theme="@style/Theme.Sandesh.NoActionBar">
-        </activity>
+        <activity android:name=".Activities.GroupChatActivity"></activity>
+        <activity
+            android:name=".Activities.ChatActivity"
+            android:theme="@style/Theme.Sandesh.NoActionBar"></activity>
         <activity android:name=".Activities.SetupProfileActivity" />
         <activity
             android:name=".Activities.OTPActivity"
@@ -31,6 +32,17 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+        See README(https://goo.gl/l4GJaQ) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/sandesh_logo" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/blue" />
     </application>
 
 </manifest>
